--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,5 @@
+version: '3.3'
+
 services:
 
   db:
@@ -9,7 +11,6 @@ services:
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASSWORD}
       LANG: C.UTF-8
-
     ports:
       - 3306:3306
     volumes:
